EVA-3 refactor: Se modifica título de plantilla e ícono.

--- a/Administracion/templates/Administracion/index.html
+++ b/Administracion/templates/Administracion/index.html
@@ -7,13 +7,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{% block titulo %}Terceros{% endblock %}</title>
+        <title>{% block titulo %}Administración{% endblock %}</title>
     </head>
     <body>
     {% block main %}
         <div class="subheader">
             <h1 class="subheader-title">
-                <i class='far fa-handshake'></i> Terceros <span class='fw-300'></span>
+                <i class='fal fa-cog'></i> Administración <span class='fw-300'></span>
                 <small>
 
                 </small>
